[package]
name = "patreon-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
toml = "0.8"
md-5 = "0.10"
hmac = "0.12"
anyhow = "1"
subtle = "2"
serde_json = "1.0.81"
serde_cow = "0.1.0"
arrayvec = { version = "0.7.4", features = ["serde"] }
smallvec = { version = "1.13.2", features = [
    "serde",
    "union",
    "const_generics",
] }
aformat = "0.1.3"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread", "signal"]
