[package]
name = "patreon-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.8"
toml = "0.8"
serde_json = "1.0.81"
serde_cow = "0.1.0"
arrayvec = { version = "0.7.4", features = ["serde"] }
smallvec = { version = "1.13.2", features = [
    "serde",
    "union",
    "const_generics",
] }
aformat = "0.1.3"
url = "2.5.4"
thiserror = "2.0.12"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls", "json"]

[dependencies.serde]
version = "1"
features = ["derive", "rc"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread", "signal", "fs"]
